Added comments answering questions written

--- a/combined_models.ipynb
+++ b/combined_models.ipynb
@@ -27,16 +27,16 @@
     "    data.append(aecLoss)\n",
     "    return eifModel.predict(data)\n",
     "\n",
-    "\n",
     "def isAnomaly(data):\n",
     "    threshold = None\n",
-    "    isAnomaly, aecLoss = autoencoderPredict(data, threshold)\n",
+    "    # need autoencoder to return boolean isAnomaly and list of features\n",
+    "    isAnomaly, aecFeatures = autoencoderPredict(data, threshold)\n",
     "\n",
     "    if not isAnomaly:\n",
     "        return False\n",
     "\n",
     "    else:\n",
-    "        return eifPredict(data, aecLoss)\n"
+    "        return eifPredict(data, aecFeatures)\n"
    ]
   },
   {
@@ -47,15 +47,17 @@
     "\"\"\"\n",
     "Questions:\n",
     "How do we obtain \"windows\" from our datasets?\n",
-    "What should k be for our data?\n",
-    "How do we obtain our threshold?Ad\n",
+    "What should k be for our data? Look at paper\n",
+    "How do we obtain our threshold? It would be a line between the average True point and average False point\n",
     "\"\"\"\n",
     "\n",
     "def pak(anomaly_segment_list, ground_truth, threshold,  k):\n",
     "    allAboveThreshold = True\n",
+    "\n",
     "    for item in anomaly_segment_list:\n",
     "        if item <= threshold:\n",
     "            allAboveThreshold = False\n",
+    "\n",
     "    if allAboveThreshold:\n",
     "        return True\n",
     "\n",
