Add contamination-based thresholding
Also corrected path length and anomaly score calculation

Training now takes over 4 minutes rather than a couple seconds, will look into

 Changes to be committed:
	modified:   test_IsolationForest.ipynb
	modified:   turtleIsolationForests/isolationForest.py

--- a/test_IsolationForest.ipynb
+++ b/test_IsolationForest.ipynb
@@ -865,6 +865,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_labels = dataframe.xs('class_normal', axis='columns')\n",
+    "\n",
     "for column in dataframe.columns:\n",
     "    if (column[0:6] == 'class_'):\n",
     "        dataframe.drop(column, axis='columns', inplace=True)\n",
@@ -1320,7 +1322,7 @@
     {
      "data": {
       "text/plain": [
-       "<turtleIsolationForests.isolationForest.IsolationForest at 0x2121e398c70>"
+       "0.4654171925730117"
       ]
      },
      "execution_count": 7,
@@ -1329,18 +1331,30 @@
     }
    ],
    "source": [
-    "model = IsolationForest(random_state = None)\n",
-    "model.fit(X_train)\n",
-    "model"
+    "contamination = sum(train_labels == 0) / len(train_labels)\n",
+    "contamination"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<turtleIsolationForests.isolationForest.IsolationForest at 0x25913059ed0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "predictions = model.predict(X_test)"
+    "model = IsolationForest(contamination = contamination, random_state = None)\n",
+    "model.fit(X_train)\n",
+    "model"
    ]
   },
   {
@@ -1350,93 +1364,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>anomaly_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22539</th>\n",
-       "      <td>6.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22540</th>\n",
-       "      <td>6.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22541</th>\n",
-       "      <td>6.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22542</th>\n",
-       "      <td>6.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22543</th>\n",
-       "      <td>6.08</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>22544 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       anomaly_score\n",
-       "0               5.91\n",
-       "1               5.92\n",
-       "2               6.62\n",
-       "3               6.40\n",
-       "4               6.00\n",
-       "...              ...\n",
-       "22539           6.70\n",
-       "22540           6.66\n",
-       "22541           6.26\n",
-       "22542           6.41\n",
-       "22543           6.08\n",
-       "\n",
-       "[22544 rows x 1 columns]"
+       "0.6300389764170244"
       ]
      },
      "execution_count": 9,
@@ -1445,127 +1374,16 @@
     }
    ],
    "source": [
-    "predictions"
+    "model.threshold"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>anomaly_score</th>\n",
-       "      <th>is_normal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.91</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.92</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6.62</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.40</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6.00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22539</th>\n",
-       "      <td>6.70</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22540</th>\n",
-       "      <td>6.66</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22541</th>\n",
-       "      <td>6.26</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22542</th>\n",
-       "      <td>6.41</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22543</th>\n",
-       "      <td>6.08</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>22544 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       anomaly_score  is_normal\n",
-       "0               5.91        0.0\n",
-       "1               5.92        0.0\n",
-       "2               6.62        1.0\n",
-       "3               6.40        0.0\n",
-       "4               6.00        0.0\n",
-       "...              ...        ...\n",
-       "22539           6.70        1.0\n",
-       "22540           6.66        1.0\n",
-       "22541           6.26        0.0\n",
-       "22542           6.41        1.0\n",
-       "22543           6.08        0.0\n",
-       "\n",
-       "[22544 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "evaluate = pd.DataFrame()\n",
-    "evaluate['anomaly_score'] = predictions\n",
-    "evaluate['is_normal'] = test_labels\n",
-    "evaluate"
+    "predictions = model.predict(X_test)"
    ]
   },
   {
@@ -1595,64 +1413,85 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>anomaly_score</th>\n",
-       "      <th>is_normal</th>\n",
+       "      <th>predicted_as_anomaly</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>22544.000000</td>\n",
-       "      <td>22544.000000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0.609969</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>6.308020</td>\n",
-       "      <td>0.430758</td>\n",
+       "      <th>1</th>\n",
+       "      <td>0.608340</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.346141</td>\n",
-       "      <td>0.495193</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0.571132</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>5.370000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>3</th>\n",
+       "      <td>0.587913</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>5.960000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>0.622980</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>6.390000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>6.640000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>22539</th>\n",
+       "      <td>0.572069</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>6.930000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>22540</th>\n",
+       "      <td>0.571650</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22541</th>\n",
+       "      <td>0.593888</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22542</th>\n",
+       "      <td>0.584342</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22543</th>\n",
+       "      <td>0.618481</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>22544 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       anomaly_score     is_normal\n",
-       "count   22544.000000  22544.000000\n",
-       "mean        6.308020      0.430758\n",
-       "std         0.346141      0.495193\n",
-       "min         5.370000      0.000000\n",
-       "25%         5.960000      0.000000\n",
-       "50%         6.390000      0.000000\n",
-       "75%         6.640000      1.000000\n",
-       "max         6.930000      1.000000"
+       "       anomaly_score  predicted_as_anomaly\n",
+       "0           0.609969                 False\n",
+       "1           0.608340                 False\n",
+       "2           0.571132                 False\n",
+       "3           0.587913                 False\n",
+       "4           0.622980                 False\n",
+       "...              ...                   ...\n",
+       "22539       0.572069                 False\n",
+       "22540       0.571650                 False\n",
+       "22541       0.593888                 False\n",
+       "22542       0.584342                 False\n",
+       "22543       0.618481                 False\n",
+       "\n",
+       "[22544 rows x 2 columns]"
       ]
      },
      "execution_count": 11,
@@ -1661,7 +1500,7 @@
     }
    ],
    "source": [
-    "evaluate.describe()"
+    "predictions"
    ]
   },
   {
@@ -1691,40 +1530,40 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>anomaly_score</th>\n",
+       "      <th>predicted_as_anomaly</th>\n",
        "      <th>is_normal</th>\n",
-       "      <th>predicted_anomaly</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5.91</td>\n",
+       "      <td>0.609969</td>\n",
+       "      <td>False</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5.92</td>\n",
+       "      <td>0.608340</td>\n",
+       "      <td>False</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6.62</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.571132</td>\n",
        "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6.40</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.587913</td>\n",
        "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6.00</td>\n",
+       "      <td>0.622980</td>\n",
+       "      <td>False</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1734,33 +1573,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22539</th>\n",
-       "      <td>6.70</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.572069</td>\n",
        "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22540</th>\n",
-       "      <td>6.66</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.571650</td>\n",
        "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22541</th>\n",
-       "      <td>6.26</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.593888</td>\n",
        "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22542</th>\n",
-       "      <td>6.41</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.584342</td>\n",
        "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22543</th>\n",
-       "      <td>6.08</td>\n",
+       "      <td>0.618481</td>\n",
+       "      <td>False</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1768,18 +1607,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       anomaly_score  is_normal  predicted_anomaly\n",
-       "0               5.91        0.0               True\n",
-       "1               5.92        0.0               True\n",
-       "2               6.62        1.0              False\n",
-       "3               6.40        0.0              False\n",
-       "4               6.00        0.0               True\n",
-       "...              ...        ...                ...\n",
-       "22539           6.70        1.0              False\n",
-       "22540           6.66        1.0              False\n",
-       "22541           6.26        0.0              False\n",
-       "22542           6.41        1.0              False\n",
-       "22543           6.08        0.0               True\n",
+       "       anomaly_score  predicted_as_anomaly  is_normal\n",
+       "0           0.609969                 False        0.0\n",
+       "1           0.608340                 False        0.0\n",
+       "2           0.571132                 False        1.0\n",
+       "3           0.587913                 False        0.0\n",
+       "4           0.622980                 False        0.0\n",
+       "...              ...                   ...        ...\n",
+       "22539       0.572069                 False        1.0\n",
+       "22540       0.571650                 False        1.0\n",
+       "22541       0.593888                 False        0.0\n",
+       "22542       0.584342                 False        1.0\n",
+       "22543       0.618481                 False        0.0\n",
        "\n",
        "[22544 rows x 3 columns]"
       ]
@@ -1790,8 +1629,8 @@
     }
    ],
    "source": [
-    "evaluate['predicted_anomaly'] = evaluate['anomaly_score'] < 6.1\n",
-    "evaluate"
+    "predictions['is_normal'] = test_labels\n",
+    "predictions"
    ]
   },
   {
@@ -1804,16 +1643,16 @@
      "output_type": "stream",
      "text": [
       "precision: 0.5\n",
-      "recall: 0.6933009184224743\n",
-      "f1-score: 0.5809942049981891\n"
+      "recall: 0.5037092279310751\n",
+      "f1-score: 0.5018477602017871\n"
      ]
     }
    ],
    "source": [
-    "true_anomaly = len(evaluate[evaluate['is_normal'] == 0 & (evaluate['predicted_anomaly'] == True)])\n",
-    "false_anomaly = len(evaluate[evaluate['is_normal'] == 0 & (evaluate['predicted_anomaly'] == False)])\n",
-    "false_normal = len(evaluate[evaluate['is_normal'] == 1 & (evaluate['predicted_anomaly'] == True)])\n",
-    "true_normal = len(evaluate[evaluate['is_normal'] == 1 & (evaluate['predicted_anomaly'] == False)])\n",
+    "true_anomaly = len(predictions[predictions['is_normal'] == 0 & (predictions['predicted_as_anomaly'] == True)])\n",
+    "false_anomaly = len(predictions[predictions['is_normal'] == 0 & (predictions['predicted_as_anomaly'] == False)])\n",
+    "false_normal = len(predictions[predictions['is_normal'] == 1 & (predictions['predicted_as_anomaly'] == True)])\n",
+    "true_normal = len(predictions[predictions['is_normal'] == 1 & (predictions['predicted_as_anomaly'] == False)])\n",
     "\n",
     "precision = true_anomaly / (true_anomaly + false_anomaly)\n",
     "recall = true_anomaly / (true_anomaly + false_normal)\n",
