--- a/combined_models.ipynb
+++ b/combined_models.ipynb
@@ -2,13 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -37,11 +31,17 @@
     "\n",
     "    else:\n",
     "        return eifPredict(data, aecFeatures)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "\"\"\"\n",
